--- a/index.qmd
+++ b/index.qmd
@@ -23,7 +23,7 @@ github("https://github.com/mayagans/")
 <div class="bio">
 <h1>Biography</h1>
 
-I am currently a Data Visualization Engineer at Atorus Research where I develop custom applications using R and JavaScript. As an RStudio intern I designed [TidyBlocks](https://tidyblocks.tech), a visual block based programming language. I also co-wrote [JavaScript for Data Science](https://js4ds.org). I use `ggplot2` and `d3.js` to create music related infographics for [JamBase.com](https://www.jambase.com/article/new-orleans-jazz-fest-after-dark-deep-dive). When I'm not coding, I'm climbing tall mountains.
+I am currently a Data Visualization Engineer at Atorus Research where I develop custom applications using R and JavaScript. As an RStudio intern I designed [TidyBlocks](https://tidyblocks.tech), a visual block based programming language. I also co-wrote [JavaScript for Data Science](https://github.com/software-tools-books/js4ds). I use `ggplot2` and `d3.js` to create music related infographics for [JamBase.com](https://www.jambase.com/article/new-orleans-jazz-fest-after-dark-deep-dive). When I'm not coding, I'm climbing tall mountains.
 
   <div class="activities">
     
